--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,23 +5,28 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:name=".App">
-        <activity android:name=".SignInActivity"
-            android:launchMode="singleInstance">
+        android:theme="@style/AppTheme" >
+        <activity
+            android:name=".SignInActivity"
+            android:launchMode="singleInstance" >
+        </activity>
+        <activity
+            android:name=".SignUpActivity"
+            android:launchMode="singleInstance"
+            android:parentActivityName=".SignInActivity" >
+        </activity>
+        <activity
+            android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity android:name=".SignUpActivity"
-            android:parentActivityName=".SignInActivity"
-            android:launchMode="singleInstance">
         </activity>
     </application>
 
