--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,6 @@ dependencies {
     compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'io.socket:socket.io-client:0.6.2'
+    compile 'com.android.support:recyclerview-v7:23.1.0'
+    compile 'de.hdodenhof:circleimageview:2.0.0'
 }
