--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     compile 'io.socket:socket.io-client:0.6.2'
     compile 'com.android.support:recyclerview-v7:23.1.0'
     compile 'de.hdodenhof:circleimageview:2.0.0'
+    compile 'com.android.support:support-v4:23.1.0'
 }
