--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,18 +20,24 @@
             android:launchMode="singleInstance"
             android:parentActivityName=".SignInActivity" >
         </activity>
-        <activity android:name=".MainActivity"
+        <activity
+            android:name=".MainActivity"
             android:launchMode="singleTask" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <data android:scheme="http" android:host="msgapp.me"
-                    android:pathPattern="/.*" />
+
+                <data
+                    android:host="msgapp.me"
+                    android:pathPattern="/.*"
+                    android:scheme="http" />
             </intent-filter>
         </activity>
     </application>
