--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.1.0'
     compile 'de.hdodenhof:circleimageview:2.0.0'
     compile 'com.android.support:support-v4:23.1.0'
+    compile 'io.realm:realm-android:0.87.0'
 }
