--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="io.msgapp.android" >
+    package="io.msgapp.android">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -10,19 +10,17 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".SignInActivity"
-            android:launchMode="singleInstance" >
-        </activity>
+            android:launchMode="singleInstance"></activity>
         <activity
             android:name=".SignUpActivity"
             android:launchMode="singleInstance"
-            android:parentActivityName=".SignInActivity" >
-        </activity>
+            android:parentActivityName=".SignInActivity"></activity>
         <activity
             android:name=".MainActivity"
-            android:launchMode="singleTask" >
+            android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -39,6 +37,15 @@
                     android:pathPattern="/.*"
                     android:scheme="http" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".ChatActivity"
+            android:label="@string/title_activity_chat"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="io.msgapp.android.MainActivity" />
         </activity>
     </application>
 
